# MonteCarlo-Polygon-Area

./: CMakeLists.txt  LICENSE  Poligono.cpp  Poligono.h  Punto.h  README.md  Recta.cpp  Recta.h  Rectangulo.cpp  Rectangulo.h  Segmento.cpp  Segmento.h  Simulacion.cpp  Simulacion.h  main.cpp
